--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/c5f7b59017.js" crossorigin="anonymous"></script>
+
   <meta charset="utf-8">
   <title>EcommerceApp</title>
   <base href="/">
