--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+
   <script src="https://kit.fontawesome.com/c5f7b59017.js" crossorigin="anonymous"></script>
 
   <meta charset="utf-8">
@@ -8,6 +9,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
 </head>
 <body>
   <app-root></app-root>
